kong-ingress-controller-handson/manifests/httpbin/service.yaml
# Service for httpbin
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: kong-test
  labels:
    app: httpbin
spec:
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
